--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,12 +6,45 @@ a {
   color: #00B7FF;
 }
 
+.form{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center
+  background: #FFF;
+}
+.form-content{
+  width: 100%;
+  height: 20px;
+}
+
+form{
+  width: 300px;
+  height: 600px;
+}
+
+.input{
+  border-radius: 20px;
+  float: right;
+  position: relative;
+  width: 70%;
+}
+label{
+  float: left;
+  position: relative;
+  width: 20%;
+  padding-top: 3px;
+  height: 100%;
+}
 .card{
   width: 6.4cm;
   height: 8.8cm;
   float: left;
   border: 1px solid #000;
   margin-bottom: 0.1cm;
+  background: #000;
 }
 .card .title-card{
   position: absolute;
@@ -25,10 +58,25 @@ a {
   color: #000;
   border-top: 1px solid;
   text-align: center;
+  border-top-left-radius: 200px 10px;
+  border-top-right-radius: 200px 10px;
 }
 .card img{
   width: 100%;
   height: 100%;
+  opacity: 0.5;
+}
+.text-card{
+  position: absolute;
+  margin-top: -100px;
+  background: #FFFFFF88;
+  width: 5.6cm; 
+  height: 40px;
+  padding: 15px;
+  font-weight: bold; 
+  font-size: 15px;
+  border-top-left-radius: 50px 5px;
+  border-top-right-radius: 50px 5px;
 }
 .label{
   position: absolute;
@@ -40,12 +88,19 @@ a {
   text-shadow: 2px 2px 2px #000;
 }
 .type{
-    position: absolute;
-    margin-top: -55px;
-    background: #F8F8F888;
-    width: 6.4cm;
-    font-weight: bold;
-    text-align: center;
+  position: absolute;
+  margin-top: -55px;
+  background: #F8F8F888;
+  width: 6.4cm;
+  font-weight: bold;
+  text-align: center;
+  border-top-left-radius: 50px 20px;
+  border-top-right-radius: 50px 20px;
+  border-bottom-left-radius: 50px 20px;
+  border-bottom-right-radius: 50px 20px;
+}
+.with-text{
+    margin-top: -119px !important;
 }
 #imprimir{
   position: fixed;
@@ -55,6 +110,8 @@ a {
   padding: 18px;
   color: #FF0000;
   background: #0000FF;
+  top: 0;
+  right: 0;
 }
 @media print{
   #imprimir, #imprimir #{
