--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center
+  align-items: center;
   background: #FFF;
 }
 .form-content{
@@ -21,8 +21,7 @@ a {
 }
 
 form{
-  width: 300px;
-  height: 600px;
+  width: 600px;
 }
 
 .input{
@@ -114,7 +113,7 @@ label{
   right: 0;
 }
 @media print{
-  #imprimir, #imprimir #{
+  #imprimir{
     visibility: hidden !important;
   }
 }
